fix overflow

--- a/style.css
+++ b/style.css
@@ -47,9 +47,13 @@ header p{
     position: relative;
 }
 
-/* #mobileimage {
+#mobileimage {
+    position: absolute;
     overflow-x: hidden;
-} */
+    width: 100vw;
+    height: 100%;
+    left: 0px;
+}
 
 header{
     grid-area: header;
@@ -149,7 +153,7 @@ img {
     padding: var(--small-gutter-size);
     border-radius: calc(2*var(--gutter-size));
     position: sticky;
-    margin-top: var(--gutter-size);
+    margin-top: calc(9*var(--gutter-size));
     z-index: 10;
 }
 
